--- a/starterSource/starterSource/index.html
+++ b/starterSource/starterSource/index.html
@@ -9,6 +9,7 @@
     
   </div>
   
+  
   <div class="textSection">
     <h3>SIMPLE CHOCOLATE CAKE</h3>
     <p>This recipe is a great easy recipe for to make simple choclate cakes.
@@ -21,5 +22,29 @@
     My favourite is Nutella and sliced banana. 
     </p>
   </div>
-  
+  <div class="kitchen-equipment">
+    
+  </div>
+
+  <div class="textSection">
+    <h3>EQUIPMENT</h3>
+    <ul>
+     <li>Cake tin or muffin tray</li>
+     <li>Large mixing bowl</li>
+     <li>Electric mixer</li>
+     <li>Cooling rack</li>
+     <li>Fork</li>
+     <li>Weighing scales</li>
+     <li>Smaller bowls, to hold ingredients</li>
+    </ul>
+  </div>
+
+  <div class="cake-ingredients">
+
+  </div>
+  <div class="cd-logo">
+    <div class="caption">
+      <span class="border">RECIPES WITH CODERDOJO</span>
+    </div>
+  </div>
 </html>
