--- a/starterSource/starterSource/index.html
+++ b/starterSource/starterSource/index.html
@@ -4,11 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+
   
+
   <div class="cd-logo">
-    
-  </div>
-  
+      <div class="caption">
+        <span class="border" >RECIPES WITH CODERDOJO</span>
+      </div>
+    </div>
   
   <div class="textSection">
     <h3>SIMPLE CHOCOLATE CAKE</h3>
@@ -39,12 +42,24 @@
     </ul>
   </div>
 
-  <div class="cake-ingredients">
-
-  </div>
-  <div class="cd-logo">
-    <div class="caption">
-      <span class="border">RECIPES WITH CODERDOJO</span>
-    </div>
-  </div>
+  <div class="cake-ingredients"></div>
+<div class="textSection">
+<h3>INGREDIENTS</h3>
+<ul>
+  <li>85 grams of Cocoa</li>
+  <li>2 eggs</li>
+  <li>250 grams of butter</li>
+  <li>125 ml of milk</li>
+  <li>220 grams of caster sugar</li>
+  <li>Toppings of your choice(I love Nutella)</li>
+ </ul>
+</div>
 </html>
+<div class="bowl-of-cakemix"></div>
+<div class="textSection">
+  <ol>
+  <li>Preheat oven to 180°(160° fan) or use gas mark 5</li>
+  <li>Grease your cake tin or muffin tray</li>
+  
+  </ol>
+</div>
