--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     My favourite is Nutella and sliced banana. 
     </p>
   </div>
+
+  <div class="decorated-cake">
+
+  </div>
+
   <div class="kitchen-equipment">
     
   </div>
